[gd_scene load_steps=2 format=3 uid="uid://bxc8iaieogphq"]

[ext_resource type="Script" path="res://CopyableDisplay.gd" id="1_besuj"]

[node name="CopyableDisplay" type="MarginContainer"]
custom_minimum_size = Vector2(0, 52)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 52.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4
script = ExtResource("1_besuj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CopyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Copy"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StringLabel" type="Label" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "test text for t
htelkjd lsest
sdfkjsdf
sdlfkjsdf"
autowrap_mode = 3

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(29.315, 0)
layout_mode = 2

[node name="Closebutton" type="Button" parent="HBoxContainer/Control"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="HBoxContainer/CopyButton" to="." method="_on_copybutton_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/Closebutton" to="." method="_on_closebutton_pressed"]
